# try_kernel

./: CMakeLists.txt  Dockerfile  justfile
application/: main.c  usermain.c
boot/: reset_hdr.c  vector_tbl.c
device/adc/: adc_rp2040.c  adc_sysdep.h  dev_adc.h
device/devmgr/: device.c  device.h  device_tbl.c
device/i2c/: dev_i2c.h  i2c_rp2040.c  i2c_sysdep.h
include/: apidef.h  config.h  error.h  gpio.h  knldef.h  sysdef.h  syslib.h  trykernel.h  typedef.h
kernel/: context.c  dispatch.S  eventflag.c  gpio.c  icc_core.c  icc_int.c  icc_msg.c  icc_spin.c  inittsk.c  interrupt.c  messagebuf.c  scheduler.c  semaphore.c  syslib.c  systimer.c  task_mange.c  task_queue.c  task_sync.c
linker/: pico_memmap.ld
